Gaps fixed in Summary

--- a/BlazorApp/Pages/Overview.razor.css
+++ b/BlazorApp/Pages/Overview.razor.css
@@ -1,19 +1,28 @@
-﻿.summary_container{
+﻿/* Summary root */
+.summary_container{
     background-color: #384561;
     padding: 0;
     display: grid;
-    grid-template-rows: 10fr 10fr 20fr 10fr 20fr 30fr;
+    grid-template-rows: 10fr 10fr 17fr 2fr 11fr 20fr 32fr;
     max-height: 100vh;
 }
 
 .summary_container > div{
-    margin: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
     color: #FFFFFF;
     text-align: center;
     font-size: 2rem;
     border-bottom: 2px solid #8E8E8E;
 }
 
+.mind-the-gap{
+    font-size: 0 !important;
+}
+
+/* Summary header */
 .summary_caption_container{
     font-size: 2rem;
     color: #FFFFFF;
@@ -21,30 +30,55 @@
     text-decoration: underline;
 }
 
+/* Current manager */
 .Current_manager_info_container {
     border-bottom: 0 !important;
+    line-height: 80%;
+
+}
+
+.Current_manager_info_container > div{
+    float: left;
+    font-size: 0.6em;
 }
 
 .Current_manager_container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background: #53607A 27%;
+    background: rgba(83, 96, 122, 0.27);
+    border-bottom: 0 !important;
  }
 
 .Current_manager_container > div{
-    margin: 1%;
+    margin: 0.5rem;
     text-align: left;
     white-space: nowrap;
     font-size: 0.7em;
 }
 
+.Current_manager_errors {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.error-reconciliation-formatting {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.Current_manager_reconciliations {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+/* Total errors and reconciliations */
 .Total_errors_and_reconciliations_container{
     display: grid;
     grid-template-columns: 1fr 1fr 1.5fr 1fr;
 }
 
 .Total_errors_and_reconciliations_container > div{
-    margin: 1%;
+    margin: 0.5rem;
     text-align: left;
     font-size: 0.7em;
 }
@@ -60,6 +94,9 @@
     gap: 1rem;
 }
 
+
+
+/* Health CSS */
 .cpu_usage{
     background-color: #384561;
     font-size: 2rem;
@@ -70,7 +107,6 @@
 .info-labels{
     display: flex;
     gap: 0.7rem;
-    
 }
 
 .cpu_info {
@@ -78,6 +114,7 @@
     background-color: #E35F52;
     border-radius: 5px;
 }
+
 .memory_info {
     font-size: 0.5em;
     background-color: #5CBCA9;
@@ -108,6 +145,7 @@
     font-size: 0.8em;
 }
 
+/* List circles */
 .circle-red {
     height: 0.5em;
     width: 0.5em;
@@ -134,4 +172,51 @@
     width: 0.5em;
     background-color: #5CBCA9;
     border-radius: 100%;
+}
+
+/* Manager queue */
+.manager-queue-container > div {
+    font-size: 0.6em;
+}
+    .queue-finished-text {
+        float: left;
+    }
+    
+    .queue-inqueue-text {
+        float: right;
+    }
+    
+    
+/* Efficiency table */    
+.efficiency-container {
+    line-height: 80%;
+    border-bottom: none !important;
+}    
+
+.efficiency-container > div {
+    font-size: 0.6em;
+    float: left;
+}
+
+
+
+/* 2k monitor w/ 150% zoom compatibility */
+@media screen and (max-width: 1500px) {
+        
+        .Current_manager_info_container > div {
+            font-size: 0.6em;
+        }
+    
+        .Current_manager_container > div {
+            font-size: 0.6em;
+        }
+    
+        .Total_errors_and_reconciliations_container{
+            grid-template-columns: 1.5fr 1fr 2.5fr 1fr;
+        }
+        
+        .Total_errors_and_reconciliations_container > div{
+            font-size: 0.6em;
+        }
+           
 }
