--- a/BlazorApp/Shared/MainLayout.razor.css
+++ b/BlazorApp/Shared/MainLayout.razor.css
@@ -1,3 +1,7 @@
+.html {
+    font-size: 100%;
+}
+
 .page {
     display: grid;
     grid-template-columns: 9.375rem 1fr;
@@ -56,7 +60,7 @@
     }
 
     .sidebar {
-        width: 9.375rem;
+        width: 100%;
         height: 100vh;
         position: sticky;
         top: 0;
